--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>gamedb1teste</title>
-
+    <title>game</title>
   </head>
   <body>
     <div id="app"></div>
